--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   "homepage": "https://github.com/8MarkOut/Color-Bayan#readme",
   "devDependencies": {
     "browserify": "^14.3.0",
+    "gulp": "^3.9.1",
     "gulp-sourcemaps": "^2.6.0",
+    "gulp-typescript": "^3.1.6",
     "gulp-uglify": "^2.1.2",
     "tsify": "^3.0.1",
+    "typescript": "^2.3.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   }
