--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
-    "@types/jquery": "^2.0.45"
+    "@types/jquery": "^2.0.45",
+    "jquery": "^3.2.1"
   }
 }
