使用midi-file插件解决传输mid文件的编码问题

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/8MarkOut/Color-Bayan#readme",
   "devDependencies": {
+    "@types/jquery": "^2.0.45",
     "@types/node": "^7.0.18",
     "browserify": "^14.3.0",
     "express": "^4.15.3",
@@ -26,12 +27,12 @@
     "gulp-sourcemaps": "^2.6.0",
     "gulp-typescript": "^3.1.6",
     "gulp-uglify": "^2.1.2",
+    "jquery": "^3.2.1",
+    "midi-file": "^1.0.2",
     "tsify": "^3.0.1",
     "typescript": "^2.3.2",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "@types/jquery": "^2.0.45",
-    "jquery": "^3.2.1"
+    "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
     "gulp-livereload": "^3.8.1",
